<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello FindMyStuff!</string>
    <string name="app_name">FindMyStuff</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="re_password">Re-enter Password</string>
    <string name="locked_error">You have exceeded the login attempt limit. Your account is locked.</string>
    <string name="password_error">Incorrect username/password combination.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="success">Successful login.</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="features">Features</string>
    <string name="add_feature">+ Add Features</string>
    <string name="feature_prompt">Choose Visibility</string>
    <string name="incident">Incident</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="found_items">Found Items</string>
    <string name="lost_items">Lost Items</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="status_prompt">Choose Status</string>
    <string name="category_prompt">Category</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>

    <string-array name="features_arrays">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string-array name="status_arrays">
        <item>Lost</item>
        <item>Found</item>
        <item>Donated</item>
    </string-array>
    <string-array name="category_arrays">
        <item>Appliances</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Sports and Outdoors</item>
    </string-array>

    <string name="title_activity_activity_view_items_list">Activity_view_items_list</string>
    <string name="title_activity_view__items__list">View_Items_List</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_lookup_user">LookupUserActivity</string>
    <string name="title_activity_search_view">SearchView</string>
    <string name="title_activity_add_incident">AddIncidentActivity</string>
    <string name="incident_date">Incident Date:</string>
    <string name="incident_location">Indicent Location:</string>
    <string name="incident_prompt">Add to Incident</string>
    <string name="add_incident">Add Incident</string>
    <string name="date_mmddyyyy">mm/dd/yyyy</string>
    <string name="new_incident">New Incident</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="incident_title">Incident Title:</string>
    <string name="password_mismatch_error">Passwords don\'t match!</string>
    <string name="email_taken_error">There is already an account associated with that email address.</string>
    <string name="username_taken_error">That username is already in use.</string>
    <string name="email_format_error">Please enter a valid email address.</string>
    <string name="password_length_error">Password must be at least 3 characters long.</string>
    <string name="username_format_error">Invalid username format.</string>


</resources>