<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addItemNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/addItemCategoryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_arrays"
        android:prompt="@string/category_prompt" />

    <Spinner
        android:id="@+id/addItemFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/status_arrays"
        android:prompt="@string/status_prompt" />


    <DatePicker
        android:id="@+id/addIncidentDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:calendarViewShown="false"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>