<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/addIncidentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/addIncidentTitleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10">
            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/addIncidentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/addIncidentCityField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress" >

        </EditText>

        <EditText
            android:id="@+id/addIncidentStateField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <TextView
        android:id="@+id/addIncidentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incident_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <DatePicker
        android:id="@+id/addIncidentDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />

    <Button
        android:id="@+id/addIncidentAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doAddIncident"
        android:text="@string/add_incident" />

</LinearLayout>