<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:id="@+id/LinearLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.75"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="0.99"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.31"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="71dp"
            android:layout_height="56dp"
            android:layout_weight="1.36"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textViewState"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26"
            android:gravity="bottom|center_horizontal"
            android:text="@string/state"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextState"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_weight="0.43"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.40"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="192dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <TextView
        android:id="@+id/registerEmailFormatError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/email_format_error"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/registerEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/email_taken_error"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LinearLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.90"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="196dp"
            android:layout_height="58dp"
            android:layout_gravity="right"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/registerUsernameFormatError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/username_format_error"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/registerUsernameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/username_taken_error"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LinearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="right"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewRePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/re_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextRePassword"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/registerPasswordLengthError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_length_error"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/registerPasswordMismatchError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/password_mismatch_error"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="registerAttempt"
        android:text="@string/register" />

</LinearLayout>